# irrepx

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
design/: FAQ.md  README.md  architecture.md  development.md
irrepx/: __init__.py  _version.py  cli.py  constants.py  io.py  irreps.py  normalize.py
irrepx/_constants/: __init__.py  _compute.py  cg.npz  jd.npz  sb_root.npz  sht.npz
irrepx/_jax/: __init__.py  gate.py  irreps_array.py  s2grid.py  spherical_harmonics.py  tensor_product.py  wigner.py
irrepx/_numpy/: __init__.py  wigner.py
irrepx/jax/: __init__.py  gate.py  irreps_array.py  s2grid.py  spherical_harmonics.py  tensor_product.py
tests/: conftest.py  test_bessel.py  test_constants.py  test_gate.py  test_io.py  test_irreps.py  test_irreps_array.py  test_jit.py  test_normalize.py  test_precomputed.py  test_s2grid.py  test_sh.py  test_sharding.py  test_tensor_product.py  test_wigner.py  test_wigner_direction.py  verify_h5_equivalence.py
